commit current progress to share with others still WIP.. basic integration tests run with all module encapulated..